# xournalpp

./: .gitignore  CMakeLists.txt  DOCKER_README.md  Dockerfile  README.md  README_OLLAMA.md  artifact_report.txt  docker-compose.yml  package-lock.json  package.json  runFreeCAD.sh  runNovaBoard.command
backend/: .env  Dockerfile  app.py  daemon.py  models.py  requirements.txt
backend/data/: models_manifest.json
backend/data/media/models/Biology/4820f139-b59c-4b48-92ac-8310c612ca54/: meta.json
backend/data/media/models/Biology/7ea11f70-f397-439c-b9d4-7470ed023bc6/: meta.json
backend/data/media/models/Biology/a13e81ac-0335-4549-9269-265bb6dd4ffc/: meta.json
backend/data/media/models/Biology/a577fb62-e9f1-4e7d-83b9-7095b09e2b16/: meta.json
backend/data/media/models/Biology/e279860f-9a3f-4620-ade6-389ab51a2749/: meta.json
backend/data/media/models/Chemistry/3694ae5c-e632-40c9-8db8-063db966c56b/: meta.json
backend/data/media/models/Engineering/032f2568-f24f-4eab-9e11-d9d2797faf6c/: meta.json
backend/data/media/models/Engineering/3191e69a-f254-40cb-9998-d3459496f688/: meta.json
backend/data/media/models/Engineering/5fd25b52-80bb-4d01-9fbd-7c93da40bb9d/: meta.json
backend/data/media/models/Engineering/f8e2f4cb-00bb-4142-86e6-6845cf5800d0/: meta.json
backend/data/media/models/History/034d97cf-f928-4640-9d64-48d8dbdba177/: meta.json
backend/data/media/models/History/2f5515ef-2c9a-4f1e-be54-450c946c3ef9/: meta.json
backend/data/media/models/History/c496908e-f7df-4b3f-b861-bb3ac3bdb4c5/: meta.json
backend/data/media/models/Physics/0f42bcb2-a83d-4a6c-a25b-9c9fe34e74f6/: meta.json
backend/data/media/models/Physics/fbf78eaa-13d6-442d-97ba-8a31b07a7181/: meta.json
backend/data/scenes/: 1ea339e8-567a-465a-bbbe-b2e8ee6269f6.json
backend/instance/: novaboard.db
backend/routes/: ai.py  models.py  nova3d.py  recordings.py  sessions.py  storage.py
backend/tests/: test_recordings.py
cmake/include/: GitRepo.cmake
demo/: import_and_demo.sh  run_demo.sh  validate_fix.sh  verify.sh
desktop/: com.github.novaboard.novaboard.desktop.in  com.github.novaboard.novaboard.thumbnailer
dev-docs/: docusaurus.config.js
docs/: ARCHITECTURE.md  MASTER_SPECIFICATION.md  MVP_PLAN.md  PI_ARCHITECTURE.md  PROFESSIONAL_REDESIGN.md  REDESIGN_SUMMARY.md  TASK_COMPLETE.md  UI_ENHANCEMENTS.md  VERIFICATION_REPORT.md  WHITE_BOX_TESTING.md
excalidraw-app/: .env.development  .env.production  App.tsx  Dockerfile  app_constants.ts  bug-issue-template.js  index.html  nginx.conf  package.json  vite.config.mts
excalidraw-app/components/: AI.tsx  AppFooter.tsx  AppMainMenu.tsx  AppSidebar.tsx  AppWelcomeScreen.tsx  Dashboard.scss  Dashboard.tsx  ExcalidrawPlusPromoBanner.tsx
excalidraw-app/data/: LocalData.ts  index.ts
instance/: novaboard.db
man/: CMakeLists.txt  extra.groff
po/: CMakeLists.txt
resources-templates/: com.github.novaboard.novaboard.appdata.xml.in  com.github.novaboard.novaboard.xml.in  toolbar.ini.in
scripts/: ingest_models.py
src/: CMakeLists.txt  config-git.h.in  config-paths.h.in  config.h.in
src/core/: CMakeLists.txt
src/core/control/: XournalMain.cpp
src/core/control/settings/: ButtonConfig.h  LatexSettings.h  MetadataManager.h  PageTemplateSettings.h  Settings.cpp  Settings.h  SettingsEnums.h  ViewModes.h
src/core/enums/: Action.enum.h
src/core/gui/: MainWindow.cpp
src/core/gui/dialog/: AboutDialog.cpp
src/core/plugin/: Plugin.cpp  Plugin.h  luapi_application.h
src/exe/: Novaboard-wrapper.cpp
src/util/: PathUtil.cpp  VersionInfo.cpp
src/util/include/util/: VersionInfo.h
src/xoj-preview-extractor/: CMakeLists.txt
ui/: about.glade  main.glade  novaboard.css
